fixed spacing in general media

--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,9 @@ p {
 .hover {
   cursor: pointer;
 }
+
+@media (width >= 800px){
+  #root {
+    gap: 100px;
+  }
+}
